Bug 458646 - First time open konqueror after clean install
Summary: First time open konqueror after clean install
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 459673 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-09-02 18:04 UTC by rip
Modified: 2023-08-13 06:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of error (35.64 KB, image/jpeg)
2022-09-02 18:04 UTC, rip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rip 2022-09-02 18:04:26 UTC
Created attachment 151786 [details]
Screenshot of error

SUMMARY
***
First time when openinf konqueror after clean installation of Debian 11 w/ KDE Plasma, an undocumented error appeared on the window. The second time i've opened it, I had no problem.
----- START ERROR INFORMATION -----
The requested operation could not be completed
Undocumented Error
Details of the Request:
URL:
Date and Time: Friday, September 2, 2022 7:49:34 PM CEST
Additional Information:
Description:
Unknown error code 1,355,074,816 Please send a full bug report at https://bugs.kde.org.
----- END ERROR INFORMATION -----
***


STEPS TO REPRODUCE
1. Install by USB debian 11 with desktop KDE
2. Setup screen resolution
3. Open Browser

OBSERVED RESULT
Error displayed inside the browser window

EXPECTED RESULT
No error at all

SOFTWARE/OS VERSIONS
Linux: Debian 11 
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel: 5.10.0-17-amd64
OS Type: 64-bit
CPU: Intel i7-10750H @ 2.6
Graphics: llvmpipe
Konqueror Version: 20.12.0

ADDITIONAL INFORMATION
None
Comment 1 Stefano Crocco 2022-09-02 18:37:10 UTC
How did you launch Konqueror? Did you launch it from the quick launch icon in the taskbar?
Comment 2 rip 2022-09-03 15:01:53 UTC
(In reply to Stefano Crocco from comment #1)
> How did you launch Konqueror? Did you launch it from the quick launch icon
> in the taskbar?

Hello there. 
Yes, I've lauched it from the quick launch icon in the taskbar, and the url was "konq:blank".
After reboot, the same thing happens. 
Thank you for your attention.
Best regards
Comment 3 Stefano Crocco 2022-09-03 19:43:05 UTC
It's a known issue: the reason is that the taskbar entry is wrong: it points to the kfmclient_html.desktop file instead of konqbrowser.desktop. I think that, unfortunately, this is  Plasma issue rather than one of Konqueror itself. I don't know how the taskbar decides which buttons to add, so I can't fix it. I tried to contact the Plasma developers about this issue in the past, but with no results.

As a workaround, you can go to /usr/share/applications using a graphical file manager and drag the file konqbrowser.desktop to the quicklaunch area in the task bar, just besides the broken one: even if the icons are the same, you can recognize the new one because it has a tool tip.
Comment 4 Stefano Crocco 2022-09-25 19:55:48 UTC
*** Bug 459673 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2023-08-04 17:52:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/210
Comment 6 Stefano Crocco 2023-08-13 06:59:48 UTC
Git commit 5d3cec3d7fe5cedcb8061d4e9ba1fac3eacf1879 by Stefano Crocco.
Committed on 13/08/2023 at 08:53.
Pushed by stefanocrocco into branch 'master'.

Add mimetype option to kfmclient

This fixes the issue where kfmclient_html is clicked by the user in the
Favorite section of the K menu. Since no URL is passed to it in that
situation, it called `kfmclient openURL text/html`, causing text/html to
be considered as the URL. To avoid this, a new mimetype option is
introduced, so that the mimetype can be specified separately from the
URL

M  +21   -5    client/kfmclient.cpp
M  +1    -1    kfmclient_dir.desktop
M  +1    -1    kfmclient_html.desktop
M  +1    -1    kfmclient_war.desktop

https://invent.kde.org/network/konqueror/-/commit/5d3cec3d7fe5cedcb8061d4e9ba1fac3eacf1879