Add mimetype option to kfmclient

This fixes the issue where kfmclient_html is clicked by the user in the
Favorite section of the K menu. Since no URL is passed to it in that
situation, it called `kfmclient openURL text/html`, causing text/html to
be considered as the URL. To avoid this, a new mimetype option is
introduced, so that the mimetype can be specified separately from the
URL

BUG: 458646